bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: Missing closing brace `}' assumed here
readMessage() match {
^BDR2:12: error: illegal start of simple pattern
	}
        ^